derive_builder/tests/compile-fail/builder_field_custom.stderr
error: Unexpected meta-item format `#[builder(default)] and #[builder(build="...")] cannot be used together`
 --> tests/compile-fail/builder_field_custom.rs:6:55
  |
6 |     #[builder(default = "88", type = "usize", build = "self.ipsum.unwrap_or_else(42) + 1")]
  |                                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
